# Thunar-s-GTA-III-Trainer-Menu

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: VehicleData.h  WeaponData.h
src/game/: Offsets.h  Player.cpp  Player.h  Resolver.cpp  Resolver.h  Utils.cpp  Utils.h  Vehicles.cpp  Vehicles.h
src/input/: Hotkeys.cpp  Hotkeys.h
src/ui/: ImGuiHook.cpp  ImGuiHook.h  Menu.cpp  Menu.h
